get data fixer to work, add some info to simple error predicate reporting, get rid of block pos cache in pattern state